# splash

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
common/: Cargo.toml
common/src/: errors.rs  lib.rs  types.rs
common/src/enums/: quantity_types.rs
common/src/traits/: indices.rs  state.rs
core/: Cargo.toml
core/src/: constants.rs  errors.rs  main.rs
core/src/interpolate/: density.rs
core/src/states/: basic_state.rs  state.rs
core/src/systems/: particle.rs
core/src/traits/: kernel.rs  state.rs
lazy_nd/: Cargo.toml
lazy_nd/src/: attribute_field.rs  attribute_info.rs  generic_info.rs  lib.rs  quantity.rs  struct_field.rs  struct_info.rs
lazy_nd/tests/: 01-minimum.rs  02-minimum_default.rs  progress.rs
macros/: Cargo.toml
macros/src/: attribute_info.rs  lib.rs  state.rs  struct_field.rs  struct_info.rs
macros/tests/: 01-hello_world.rs  progress.rs
src/: errors.bak  errors.rs  lib.rs  main.rs  particle.rs  types.rs
src/interpolate/: density.rs  force_viscous.rs
src/kernel/: cubic_spline.bak  cubic_spline.rs
src/kernels/: cubic_spline.rs
src/state/: macros.rs  mod.rs
src/state/basic/: state.rs  traits.rs
src/states/: basic_state.rs  state.rs
src/systems/: particle.rs
src/traits/: float.rs  interpolator.bak  kernel.rs  state.rs  validator.rs
src/traits/state/: density.rs
