[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
common = {path = "../common"}
quote = "1.0.38"
syn = { version = "2.0.92", features =  ["extra-traits"]}

