[package]
name = "macros"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
common = { path = "../common" }
ndarray = "0.16.1"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.92", features = ["extra-traits"] }
